Correcting issue with LinkedIn showing html when sharing

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ error_log
 wp-content/themes/Avada/
 wp-content/plugins/wp-optimize/
 wp-content/backupwordpress-32554d9aad-backups/
+wp-content/backupwordpress-53c58cdb02-backups/
